--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,20 @@
 spring.application.name=license-server
+server.port=8081
 
 spring.datasource.url=jdbc:h2:mem:licensedb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=dbuser
 spring.datasource.password=dbpassword
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+
+# SSL
+server.ssl.enabled=true
+# The format used for the keystore. It could be set to JKS in case it is a JKS file
+server.ssl.key-store-type=PKCS12
+# The path to the keystore containing the certificate
+server.ssl.key-store=classpath:keystore/licenseserver.p12
+# The password used to generate the certificate
+server.ssl.key-store-password=123456789
+# The alias mapped to the certificate
+server.ssl.key-alias=licenseserver
